log

Thu 14 Mar 2024 08:39:06 PM UTC: 
 exercises.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/70
e66a336
Thu 14 Mar 2024 08:39:36 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
341a2bf
Thu 14 Mar 2024 08:59:06 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
1512f02
Thu 14 Mar 2024 09:06:24 PM UTC: 
 exercises.c | 12 +++++-------
 1 file changed, 5 insertions(+), 7 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:33:7: error: ‘i’ undeclared (first use in this function)
   33 |   for(i = 0; i < size / 2; i++)
      |       ^
exercises.c:33:7: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:32:7: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
   32 |   int aux;
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
93f1467
Thu 14 Mar 2024 09:07:55 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:33:7: error: ‘i’ undeclared (first use in this function)
   33 |   for(i = 0; i < size / 2; i++)
      |       ^
exercises.c:33:7: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
d8d5173
Thu 14 Mar 2024 09:08:21 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
789cc0a
Thu 14 Mar 2024 09:13:37 PM UTC: 
 exercises.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:51:17: error: invalid initializer
   51 |   int *arr2[] = (int *) malloc(size * sizeof(int));
      |                 ^
exercises.c:56:16: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   56 |         arr[i] = arr2[i];
      |                ^
exercises.c:61:15: error: expected expression before ‘]’ token
   61 |   return arr2[];
      |               ^
exercises.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
   62 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
97b3c35
Thu 14 Mar 2024 09:14:16 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:51:17: error: invalid initializer
   51 |   int *arr2[] = (int *) malloc(size * sizeof(int));
      |                 ^
exercises.c:52:12: error: assignment to expression with array type
   52 |   if (arr2 = NULL) exit(EXIT_FAILURE);
      |            ^
exercises.c:57:16: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   57 |         arr[i] = arr2[i];
      |                ^
exercises.c:62:15: error: expected expression before ‘]’ token
   62 |   return arr2[];
      |               ^
exercises.c:63:1: error: control reaches end of non-void function [-Werror=return-type]
   63 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
04f48a6
Thu 14 Mar 2024 09:14:45 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:51:17: error: invalid initializer
   51 |   int *arr2[] = (int *) malloc(size * sizeof(int));
      |                 ^
exercises.c:52:12: error: assignment to expression with array type
   52 |   if (arr2 = NULL) exit(EXIT_FAILURE);
      |            ^
exercises.c:58:16: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   58 |         arr[i] = arr2[i];
      |                ^
exercises.c:63:16: error: expected expression before ‘]’ token
   63 |   return *arr2[];
      |                ^
exercises.c:64:1: error: control reaches end of non-void function [-Werror=return-type]
   64 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8a36e34
